--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10948,7 +10948,7 @@ ul.check-circle li:before {
 
     float: left;
 
-    padding-left: 20px;
+    /*padding-left: 20px;*/
 
     padding-right: 20px; }
 
