Adicionado funcionalidade de destaque em eventos especiais.
criado nova função no basecontroller para remover as TAGS HTML das descrições dos produtos (util quando puxa uma collection para um index de lista)

adicionado código no controller da home para puxar 3 eventos em destaque, se não houver nenhum evento em destaque, puxa os 3 primeiros q encontrar.

alterado CSS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19724,3 +19724,27 @@ element.style {
 /*  nav#main-menu {
   display: none !important;
 }*/
+
+.col-sm-6.col-md-3.footer2 {
+  width: 20%;
+  margin-right: -37px !important;
+margin-left: -19px;}
+
+
+.col-sm-6.col-md-3.footer1 {
+  width: 29%;
+}
+
+
+
+.col-sm-6.col-md-3.footer4 {  padding-left: 4%;
+}
+
+
+.col-sm-6.col-md-3.footer3 {
+  padding-left: 3%;
+}
+
+#footer .footer-wrapper {
+  padding: 38px 0;
+}
