Modificações do ultimo email;
Bem, vamos lá!
=> Temos que alterar as parcelas para 6X; - OK
=> Inserir Css: form {padding-left:4.6em;} ; - OK
=> Inserir: article.box { padding-left: 2.6em;
padding-top: 1.6em;}
=> No botão do pagamento, em verde, deve colocar uma class ou id para que ele não fique alinhado a direita. Se colocar css no "element style" afetaria outros elementos do site. Seria "element.style (com o nome a ser criado"" {padding-top: 1.6em;
padding-right: 2.6em;} - OK
=>Segui o fluxo come descrito acima, quando cheguei na etapa "efetuar pagamento", ao clicar no botão verde deu tela preta, enviei no wpp a tela. Daí não mais prossegui; - Já foi corrigido, foi sobre oque falamos no WPP
=> Os titulos das páginas internas estão enormes, devemos diminuí-los para "font-size: 0.6667em" pois ele está puxando o h2 que deve permanecer com o tamanho atual pois utiliza outros títulos do site. Ou muda pra h4 ou 5 ou cria uma id ou class com o valor da fonte acima. - Criarei uma classe nova e aplicarei este estilo.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19750,3 +19750,8 @@ margin-left: -19px;}
 }
 
 .tab-container ul.tabs li a{ padding: 0 17px !important; }
+
+.entry-title
+{
+  font-size: 0.6667em;
+}
