Principal: Separado menus em arquivos separados para melhor manutenção futura. agora os mesmos arquivos são utilizados para a versão mobile e a versão desktop.
=> Na descriminação dos serviços do carrinho alguns possuem categoria, outros não Ex: Nuth Louge (Boate), Trilha pedra da Gávea (Trilhas) Seria bom que eles tivessem o nome da categoria pai, então Trilha da Pedra da Gávea seria "passeios" e por ai vai, apenas apontando a categoria pai (que está no menu).
R: Agora ele sempre mostra qual é o tipo de produto (categoria do menu), e se houver o TIPO (ex: boate, restaurante, gayfriendly) eh adicionado ao lado. Achei que ficou bem bacana!

=> No menu mobile e dispositivos móveis,(basta reduzir o tamanho do navegador para ver) alguns dropdowns funcionam e outros não, EX: Passeios não funciona ao clicar em + e nos detinos aparecem todos os Continentes.
R: Corrigido;

=> Mobile; O menu que aparece no mobile não corresponde ao do desktop, ele não leva o login (já logado) em consideração e tampouco exibe o carrinho e os pedidos. Tem que testar o fluxo pelo mobile também (basta reduzir as dimensões do navegador pela janela)
R: Corrigido;

OBS: Falta só o footer. Estou averiguando e quando consertar eu aviso.

OBS2: tbm falta a seguinte tarefa, ja vai ser corrigido -> => Deixar funcionar a data dos pedidos está aparecendo "SAT 23" como default para todos Na info do Booking também;

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11440,7 +11440,9 @@ ul.menu.mini {
 
   border: 2px solid #01b7f2;
 
-  background: #fff; }
+  /*background: #fff; */
+
+  background: #0098CA; }
 
   ul.menu.mini li {
 
