Bugs faltantes corrigidos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11440,9 +11440,9 @@ ul.menu.mini {
 
   border: 2px solid #01b7f2;
 
-  /*background: #fff; */
-
-  background: #0098CA; }
+  background: #fff;
+  /*WILLY*/
+  /*background: #0098CA;*/ }
 
   ul.menu.mini li {
 
